--- a/package.json
+++ b/package.json
@@ -135,6 +135,7 @@
     "libp2p-webrtc-star": "~0.15.0",
     "libp2p-websocket-star": "~0.8.0",
     "libp2p-websockets": "~0.12.0",
+    "lodash.defaultsdeep": "^4.6.0",
     "lodash.flatmap": "^4.5.0",
     "lodash.get": "^4.4.2",
     "lodash.set": "^4.3.2",
