--- a/package.json
+++ b/package.json
@@ -122,13 +122,14 @@
     "joi": "^13.2.0",
     "joi-browser": "^13.0.1",
     "joi-multiaddr": "^2.0.0",
-    "libp2p": "~0.20.4",
+    "libp2p": "github:libp2p/js-libp2p#feat/priv-net",
     "libp2p-circuit": "~0.2.0",
     "libp2p-floodsub": "~0.15.0",
     "libp2p-kad-dht": "~0.10.0",
     "libp2p-keychain": "~0.3.1",
     "libp2p-mdns": "~0.11.0",
     "libp2p-mplex": "~0.7.0",
+    "libp2p-pnet": "github:libp2p/js-libp2p-pnet#feat/initial",
     "libp2p-railing": "~0.8.1",
     "libp2p-secio": "~0.10.0",
     "libp2p-tcp": "~0.12.0",
